[package]
name = "gizmo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
egui = "0.18.1"
egui-macroquad = "0.11.0"
egui-gizmo = "0.7.0"

[[bin]]
name = "gizmo"
path = "../../bins/gizmo.rs"